corpus/cpp/coroutine/case-01/snapshots/gcc13_14/single_sink_structured/render.default.txt
error: [syntax] unable to find the promise type for this coroutine @ src/main.cpp:6:5
raw : unable to find the promise type for this coroutine
| src/main.cpp:6:5
|     co_return;
|     ^